add pic for get-our-ebrouchure

--- a/index.html
+++ b/index.html
@@ -433,13 +433,12 @@
               </div>
               <div class="row fancybox-light mb-40">
                 <div class="col-sm-12 col-md-12 col-lg-12">
-                  <!-- <div class="embeda-forms-default" id="MTBldTRnQkN1TkFrNVNGUy9PT3U1QT09" data-app="forms"></div>
-                  <script data-cfasync="false" src="./cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"> -->
-                  <div class="index-ebook-request" style="height: 250px;overflow-y:scroll;">
-                    <script type="text/javascript" src="https://form.jotform.com/jsform/212701658068861"></script>
-                  </div>
-
+                  <div class="embeda-forms-default" id="MTBldTRnQkN1TkFrNVNGUy9PT3U1QT09" data-app="forms"></div>
+                  <script data-cfasync="false" src="./cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js">
                   </script>
+                  <!-- <div class="index-ebook-request" style="height: 250px;overflow-y:scroll;">
+                    <script type="text/javascript" src="https://form.jotform.com/jsform/212887949938077"></script>
+                  </div> -->
                   <script>
                     (function (d, s, id) {
                       var js;
