--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     href="https://fonts.googleapis.com/css?family=Barlow:400,500,600,700%7cRoboto:400,500,700&display=swap">
   <link rel="stylesheet" href="./assets/css/libraries.css">
   <link rel="stylesheet" href="./assets/css/style.css">
-
   <script>
     "use strict";
 
@@ -50,9 +49,6 @@
     drift.SNIPPET_VERSION = '0.3.1';
     drift.load('3emc4wxghnsf');
   </script>
-
-
-
   <script>
     ! function (f, b, e, v, n, t, s) {
       if (f.fbq) return;
@@ -436,7 +432,8 @@
                   <div class="embeda-forms-default" id="MTBldTRnQkN1TkFrNVNGUy9PT3U1QT09" data-app="forms"></div>
                   <script data-cfasync="false" src="./cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js">
                   </script>
-                  <!-- <div class="index-ebook-request" style="height: 250px;overflow-y:scroll;">
+                  <!-- jotform ready
+                  <div class="index-ebook-request" style="height: 360px;overflow-y:hidden;">
                     <script type="text/javascript" src="https://form.jotform.com/jsform/212887949938077"></script>
                   </div> -->
                   <script>
@@ -538,6 +535,10 @@
                     <div class="embeda-forms-default" id="SUJXazdXdmU4dE1zQ01TZHgybmRvZz09" data-app="forms"></div>
                     <script data-cfasync="false" src="./cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js">
                     </script>
+                    <!-- jotform ready -->
+                    <!-- <div class="index-ebook-request" style="height: 521px;overflow-y:hidden;">
+                      <script type="text/javascript" src="https://form.jotform.com/jsform/212883561502050"></script>
+                    </div> -->
                     <script>
                       (function (d, s, id) {
                         var js;
@@ -636,6 +637,7 @@
                       class="fa fa-tumblr"></i></a></li>
               </ul>
               <br>
+              <img src="./assets/images/logo-south-australia.png" style="width:120px" alt="Logo South Australia" />
               <img src="./assets/images/logo-south-australia.png" style="width:120px" alt="Logo South Australia" />
             </div>
           </div>
